🚑Hotfix :  add cors config